	- Fix occasional NRE in AnalyseCollision.
IMPROVEMENTS
	- Internal:
		- Add angle parameter for creating directed explosions (defaults to 100°).
		- Log 'StopCompetition' events to the log as well as the screen.
	- Armor:
		- Add attach node sizes to armor panels.
		- Add Editor RMB context info for armor panels to inform players of panel armor mass.
	- Allow collision avoidance detection from vessels approaching from behind.
	- Add Asteroid Field game mode, with anomalous attraction option.

v1.4.8.2
FIXES
	- Fixes armor panel settings not persisting from Editor to Flight.
	- Fixes steel hull material massively increasing weight.
	- Triangular armor panels/wings now properly have 1/2 armor mass of rectangular panels.
	- Put the Gau-22 in the correct category in the SPH.
	- Fix minor mesh errors on the Sidam.
	- Don't detonate CASE ammo on vessel packing or unloading.
	- More fixes for proc-wings:
		- HP is updated properly on vessel load.
		- Mostly fixed interaction between the HP/Armor visualizer and proc wings shaders.
IMPROVEMENTS
	- Add a slider for controlling the distance threshold of showing team icons.

KNOWN ISSUES
	- Occasional graphical glitch for proc wings in the SPH/VAB due to HP/Armor visualizer. Doesn't affect flight mode and the color resets if the craft is reloaded or the proc wings color settings are nudged.
	- Flickering of the RCS window, particularly when the Armor window is open. 
	- Tweakscale HP is misbehaving beyond certain size changes.

v1.4.8.1
FIXES
	- Fix (mostly) Pwing - HPVisualizer issue
	- Fix burstfire
	- Fix procwing HP bug
IMPROVEMENTS
	- Internal stuff:
		- Implement the AddPlayerToRammingInformation and RemovePlayerFromRammingInformation functions (not used yet).

v1.4.8.0
FIXES
	- Fix logic of which vessels to ignore in RCS snapshots.
	- onDisable -> OnDisable. Deactivate FireFX properly such that the parentPart always gets cleared (also in FuelLeakFX.cs).