@@ -452,6 +452,7 @@ Localization
         #LOC_BDArmory_MinEvasionTime = Min Evasion Time
         #LOC_BDArmory_EvasionThreshold = Evasion Distance Threshold
         #LOC_BDArmory_EvasionTimeThreshold = Evasion Time Threshold	
+        #LOC_BDArmory_EvasionIgnoreMyTargetTargetingMe = Don't Evade My Target
         #LOC_BDArmory_CollisionAvoidanceThreshold = Vessel Avoidance Threshold
         #LOC_BDArmory_CollisionAvoidanceLookAheadPeriod = Vessel Avoidance Look-Ahead
         #LOC_BDArmory_CollisionAvoidanceStrength = Vessel Avoidance Strength
@@ -564,7 +565,7 @@ Localization
         #LOC_BDArmory_AIWindow_ControlHelp_clamps = Max Allowed G and AoA - Max Allowed G limits the AI to maneuvers that pull this many Gs or less. Max Allowed AoA limits the the maximum Angle of Attack the AI can use.
 
         #LOC_BDArmory_AIWindow_EvadeHelp = Evasion/Extension controls both how the AI reacts to incoming threats, be it gunfire, missiles, or other craft, and how the AI responds to where other craft are, relative to itself. 
-        #LOC_BDArmory_AIWindow_EvadeHelp_Evade = EvasionTime, EvasionThreshold, EvasionTimeThreshold - These three settings control when the AI will evade. EvasionTime sets how many seconds the AI will do evasive maneuvers. EvasionTimeThreshold sets how long the AI needs to be under fire before it begins evading. EvasionThreshold sets how close incoming gunfire needs to come to trigger evasion.
+        #LOC_BDArmory_AIWindow_EvadeHelp_Evade = EvasionTime, EvasionThreshold, EvasionTimeThreshold, Don't Evade My Target - These four settings control when the AI will evade. EvasionTime sets how many seconds the AI will do evasive maneuvers. EvasionTimeThreshold sets how long the AI needs to be under fire before it begins evading. EvasionThreshold sets how close incoming gunfire needs to come to trigger evasion. The Don't Evade My Target toggle determines whether gunfire from the current target is ignored for evasion purposes.
         #LOC_BDArmory_AIWindow_EvadeHelp_Dodge = Vessel Avoidance - These three settigns set how the AI reacts to potential collisions. If another vessel is predicted to get within the Avoidance Threshold within the next Look-Ahead period then the AI will try to dodge it. The Avoidance Strength determines how rapidly the AI will try to change direction to avoid a predicted collision.
         #LOC_BDArmory_AIWindow_EvadeHelp_standoff = Standoff Distance is the closest the AI will approach the targeted craft in combat. If closer than the Standoff Distance, the AI will brake to increase the distance to the target.
         #LOC_BDArmory_AIWindow_EvadeHelp_Extend = Extend Multiplier - If Extending is enabled, this adjusts the distance the AI will extend from its default of 300 meters
